<resources>
    <string name="app_name">АМС-контроль</string>

    <string name="objects">Объекты</string>
    <string name="measurements">Измерения</string>
    <string name="report">Отчет</string>

    <!-- Menu -->
    <string name="main_menu_new">Создать</string>
    <string name="main_menu_load_local">Найти на утройстве</string>
    <string name="main_menu_load_server">Найти на сервере</string>
    <string name="main_menu_save_local">Сохранить на устройство</string>
    <string name="main_menu_save_server">Сохранить на сервере</string>
    <string name="main_menu_preferences">Настройки</string>
    <string name="main_menu_sync">Синхронизировать</string>
    <string name="main_menu_quit">Выйти</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>