<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/mm_new"
            android:icon="@drawable/ic_baseline_domain_add_24"
            app:showAsAction="ifRoom"
            android:title="@string/main_menu_new"/>
    </group>

    <group>
        <item
            android:id="@+id/mm_load_local"
            android:title="@string/main_menu_load_local"/>

        <item
            android:id="@+id/mm_load_server"
            android:title="@string/main_menu_load_server"/>
    </group>

    <group>
        <item
            android:id="@+id/mm_save_local"
            android:title="@string/main_menu_save_local"/>

        <item
            android:id="@+id/mm_save_server"
            android:title="@string/main_menu_save_server"/>
    </group>

    <group>
        <item
            android:id="@+id/mm_pref"
            android:title="@string/main_menu_preferences"/>
        <item
            android:id="@+id/mm_sync"
            android:title="@string/main_menu_sync"/>
    </group>

    <group>
        <item
            android:id="@+id/mm_quit"
            android:title="@string/main_menu_quit"/>
    </group>
</menu>